--- a/afghan.html
+++ b/afghan.html
@@ -29,6 +29,7 @@
 				<li><a href="bedspread.html">Bedspread Patterns</a></li>
 				<li><a href="round.html">Decorative Doily Patterns</font></a></li>		 
 				<li><a href="floral.html">Floral Doily Patterns</a></li>
+	                         <li><a href="tablecloths.html">Tablecloth Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
                 <li><a href="index.html">HOME</a></li>
        
