--- a/floral.html
+++ b/floral.html
@@ -31,6 +31,7 @@
                 <li><a href="floral.html"><font color="#ff0066"><b>Floral Doily Patterns</b></font></a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
                 <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
+		<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
                 <li><a href="index.html">HOME</a></li>
                 
                 
