--- a/ruffle.html
+++ b/ruffle.html
@@ -32,6 +32,7 @@
                 <li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
 		<li><a href="ruffle.html"><font color="#ff0066"><b>Ruffle Doily Patterns</b></font></a></li>
+		<li><a href="tablecloths.html">Tablecloth Patterns</a></li>    
                 <li><a href="index.html">HOME</a></li>
        
             </ul>
