--- a/floral.html
+++ b/floral.html
@@ -26,14 +26,14 @@
     	<div class="side">
             <h3>Free Crochet Index</h3>
             <ul>
-						 
+				<li><a href="afghan.html">Afghan Patterns</a></li>	 
 				<li><a href="bedspread.html">Bedspread Patterns</a></li>
 				<li><a href="round.html">Decorative Doily Patterns</a></li>
-                 <li><a href="floral.html"><font color="#ff0066"><b>Floral Doily Patterns</b></font></a></li>
-                <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
-                <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
+                                <li><a href="floral.html"><font color="#ff0066"><b>Floral Doily Patterns</b></font></a></li>
+                                <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
+				<li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
+				<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
                 <li><a href="index.html">HOME</a></li>
-               </ul>
         </div>
 		<div class="side">
            
