--- a/index.html
+++ b/index.html
@@ -45,13 +45,10 @@
   
 		
 	
-<div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font></center>
-
+<div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font>
+	
 <div class="grid-view"><div class="prev"><a href="tablecloths/lotus.html"><img src="tablecloths/images/lotust.jpg" alt="" /></a></div><p><a href="tablecloths/lotus.html">Lovely Lotus Tablecloth</a></p></div>
-
-
 <div class="grid-view"><div class="prev"><a href="bedspread/pansys.html"><img src="bedspread/images/pansyst.jpg" alt="" /></a></div><p><a href="bedspread/pansys.html">Pansy Spread</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
 <div class="grid-view"><div class="prev"><a href="bedspread/poin.html"><img src="bedspread/images/point.jpg" alt="" /></a></div><p><a href="bedspread/poin.html">Poinsettia Posy</a></p></div>
 <div class="grid-view"><div class="prev"><a href="floral/rosebouquet.html"><img src="floral/images/rosebouquett.jpg" alt="" /></a></div><p><a href="floral/rosebouquet.html">Rose Bouquet</a></p></div>
@@ -62,30 +59,20 @@
 <div class="grid-view"><div class="prev"><a href="ruffle/starbr.html"><img src="ruffle/images/starbrt.jpg" alt="" /></a></div><p><a href="ruffle/starbr.html">Starburst Ruffle</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="round/brocade.html"><img src="round/images/brocadet.jpg" alt="" /></a></div><p><a href="round/brocade.html">Brocade Doily</a></p></div>
-            <div class="clear"></div>
-        </div>
+
+
+
+      	
         <div class="clear"></div>
     </div>
     <div class="clear"></div>
 </div>
 </div>
 <!--------------------------------------->
-
-    <div class="clear"></div>
-   <div class="copy">
-    <center><img src="images/cat.jpg" />
-	    <br><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<ins class="adsbygoogle"
-     style="display:inline-block;width:940px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7284094464"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
+<div class="clear"></div>
+<center>
+   <div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
 </body>
 </html>
-
