--- a/ruffle.html
+++ b/ruffle.html
@@ -79,17 +79,8 @@
 </div>
 <!--------------------------------------->
 
-
-   <div class="copy"> <center><br><div class="clear"></div><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- just -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:60px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="7255958700"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-     <br><Br>&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
+    <div class="clear"></div>
+     <br><Br><center><div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
 </body>
